Add dropdown menus to navbar

--- a/index.html
+++ b/index.html
@@ -12,19 +12,31 @@
     
     <!-- Header -->
     <div class="navbar">
-        <a><b>Bli Medlem</b></a>
-        <a>Om Föreningen</a>
-        <a>Kontakt</a>
+        <div class="dropdown">
+            <a class="dropbtn">Bli Medlem</a>
+        </div>
+        <div class="dropdown">
+            <a class="dropbtn">Om Föreningen</a>
+            <div class="dropdown-content">
+                <a href="#">Om Föreningen</a>  
+                <a href="#">Mål</a>
+                <a href="#">Styrelse</a>
+                <a href="#">Stadgar</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <a class="dropbtn">Kontakt</a>
+        </div>
     </div>
 
     <!-- Body Homepage -->
     <div class="background-image">
-        <img src="src/images/meadow.jpg" />
+        <img src="src/images/malmangar.jpg" />
     </div>
 
     <div class="homepage-frontscreen">
         <div class="homepage-left">
-            <h1>Rädda Malma Ängar!</h1>
+            <h1 style="font-size: 3rem;">Rädda Malma Ängar!</h1>
         </div>
         <div class="homepage-right">
             <h2>Hjälp oss bevara vår natur!</h2>
@@ -41,12 +53,6 @@
     <!-- body Info -->
     <div class="homepage-info" id="homepage-info-page">
         <div>
-            <div class="homepage-info-images">
-                <img src="src/images/blomma2.png" />
-                <img src="src/images/blomma1.png" />
-                <img src="src/images/blomma1.jpg" />
-                <img src="src/images/blomma2.jpg" />
-            </div>
             <h3>Biologisk mångfald i hagen</h3>
             <p>
                 Åkerbackarna och hällarna i betesmarken är mycket artrika. Floran har utvecklats och
@@ -58,6 +64,24 @@
                 backklöver och solvända samt flentimotej, vippärt, gullklöver och vårstarr rödlistade.
                 Att en art är rödlistad innebär att den bedöms riskera att dö ut från Sverige.
                 Hur många av dessa kan du hitta i sommar?
+            </p>
+        </div>
+        <div class="homepage-info-images">
+            <img src="src/images/blomma2.png" />
+            <img src="src/images/blomma1.png" />
+            <img src="src/images/blomma1.jpg" />
+            <img src="src/images/blomma2.jpg" />
+        </div>
+        <div>
+            <h3>Vaxskivlingar är ofta praktfulla</h3>
+            <p>
+                Den magra jorden och den långa beteshävden har givit upphov till en rik
+                ängssvampsflora. Det finns minst 12 olika arter av vaxskivlingar och
+                ängsfingersvampar på ängen. Det tyder på att området har ett högt lokalt
+                bevarandevärde som ängs- och betesmark. Två av svamparna, scharlakansvaxskivling
+                och gråbrun ängsfingersvamp, är dessutom rödlistade.
+                Vaxskivlingar är ofta riktigt praktfulla och färggranna svampar och roliga att leta efter.
+                Du hittar dem främst under september till oktober.
             </p>
         </div>
         <div>
@@ -75,18 +99,6 @@
                 </p>
                 <img src="src/images/bi1.png" />
             </div>
-        </div>
-        <div>
-            <h3>Vaxskivlingar är ofta praktfulla</h3>
-            <p>
-                Den magra jorden och den långa beteshävden har givit upphov till en rik
-                ängssvampsflora. Det finns minst 12 olika arter av vaxskivlingar och
-                ängsfingersvampar på ängen. Det tyder på att området har ett högt lokalt
-                bevarandevärde som ängs- och betesmark. Två av svamparna, scharlakansvaxskivling
-                och gråbrun ängsfingersvamp, är dessutom rödlistade.
-                Vaxskivlingar är ofta riktigt praktfulla och färggranna svampar och roliga att leta efter.
-                Du hittar dem främst under september till oktober.
-            </p>
         </div>
         <div>
             <h3>Hjälp till rädda Malma by och ängar</h3>
