--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div class="homepage-frontscreen">
         <div class="homepage-left">
-            <h1 style="font-size: 3rem;">Rädda Malma Ängar!</h1>
+            <h1 style="font-size: 3rem;">Rädda Malma By Och Ängar!</h1>
         </div>
         <div class="homepage-right">
             <h2>Hjälp oss bevara vår natur!</h2>
