Add become member page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/styles.css">
     <link rel="stylesheet" href="src/header.css">
+    <link rel="stylesheet" href="src/footer.css">
     <title>Malma Ängar</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
     <!-- Header -->
     <div class="navbar">
         <div class="dropdown">
-            <a class="dropbtn">Bli Medlem</a>
+            <a class="dropbtn" href="pages/bli-medlem.html">Bli Medlem</a>
         </div>
         <div class="dropdown">
             <a class="dropbtn">Om Föreningen</a>
@@ -181,7 +182,8 @@
 
     </div>
 
-    <!-- Footer? -->
+    <!-- Footer -->
+    <div class="footer"></div>
 
 </body>
 </html>
