--- a/pages/bli-medlem.html
+++ b/pages/bli-medlem.html
@@ -6,30 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../src/pages.css">
     <link rel="stylesheet" href="../src/header.css">
+    <link rel="stylesheet" href="../src/footer.css">
     <title>Malma Ängar</title>
 </head>
 <body>
     
     <!-- Header -->
-    <div class="navbar" style="background-color: #272727;">
-        <div class="dropdown">
-            <a class="dropbtn">Bli Medlem</a>
+    <div class="navbar-pages">
+        <div class="navbar-pages-home">
+            <a href="../index.html"><h2>Föreningen Malma By Och Ängar</h2></a>
         </div>
-        <div class="dropdown">
-            <a class="dropbtn">Om Föreningen</a>
-            <div class="dropdown-content">
-                <a href="#">Om Föreningen</a>  
-                <a href="#">Mål</a>
-                <a href="#">Styrelse</a>
-                <a href="#">Stadgar</a>
+        <div class="navbar navbar-pages-links">
+            <div class="dropdown">
+                <a class="dropbtn">Bli Medlem</a>
             </div>
-        </div>
-        <div class="dropdown">
-            <a class="dropbtn">Kontakt</a>
+            <div class="dropdown">
+                <a class="dropbtn">Om Föreningen</a>
+                <div class="dropdown-content">
+                    <a href="#">Om Föreningen</a>  
+                    <a href="#">Mål</a>
+                    <a href="#">Styrelse</a>
+                    <a href="#">Stadgar</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <a class="dropbtn">Kontakt</a>
+            </div>
         </div>
     </div>
 
-    
+    <!-- Body -->
+    <img class="image-title" src="../src/images/Blomma 3.jpg">
+    <div class="cover">
+        <h1>Bli Medlem</h1>
+    </div>
+
+    <div class="bli-medlem-info">
+        <p class="important">Ulla-Britt Ekström tar emot medlemsansökan via Mail på denna adress:</p>
+        <p class="bold">ub.ekstrom@fogelin@icloud.com</p>
+        <p class="important">Medlemskap är för närvarande utan avgift.</p>
+    </div>
+
+    <!-- Footer -->
+
+    <div class="footer" style="position: fixed; bottom: 0;"></div>
 
 </body>
 </html>
