Update member page styling

--- a/pages/bli-medlem.html
+++ b/pages/bli-medlem.html
@@ -37,11 +37,10 @@
 
     <!-- Body -->
     <img class="image-title" src="../src/images/Blomma 3.jpg">
-    <div class="cover">
-        <h1>Bli Medlem</h1>
-    </div>
+    <div class="cover"></div>
 
     <div class="bli-medlem-info">
+        <h1>Bli Medlem</h1>
         <p class="important">Ulla-Britt Ekström tar emot medlemsansökan via Mail på denna adress:</p>
         <p class="bold">ub.ekstrom@fogelin@icloud.com</p>
         <p class="important">Medlemskap är för närvarande utan avgift.</p>
@@ -49,7 +48,7 @@
 
     <!-- Footer -->
 
-    <div class="footer" style="position: fixed; bottom: 0;"></div>
+    <div class="footer" style="position: absolute; bottom: -75px;"></div>
 
 </body>
 </html>
