Update styling and remove footer

--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
 
     </div>
 
-    <!-- Footer -->
-    <div class="footer"></div>
+    <!-- Footer (future problem)-->
+    
 
 </body>
 </html>
