--- a/pages/bli-medlem.html
+++ b/pages/bli-medlem.html
@@ -37,7 +37,9 @@
 
     <!-- Body -->
     <img class="image-title" src="../src/images/Blomma 3.jpg">
-    <div class="cover"></div>
+    <div class="cover">
+        <h1>Bli Medlem</h1>
+    </div>
 
     <div class="bli-medlem-info">
         <h1>Bli Medlem</h1>
@@ -46,9 +48,7 @@
         <p class="important">Medlemskap är för närvarande utan avgift.</p>
     </div>
 
-    <!-- Footer -->
-
-    <div class="footer" style="position: absolute; bottom: -75px;"></div>
+    <!-- Footer (Future problem) -->
 
 </body>
 </html>
