Add a bunch of pages

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
             <a class="dropbtn" href="pages/bli-medlem.html">Bli Medlem</a>
         </div>
         <div class="dropdown">
-            <a class="dropbtn">Om Föreningen</a>
+            <a class="dropbtn" href="pages/om-föreningen.html">Om Föreningen</a>
             <div class="dropdown-content">
-                <a href="#">Om Föreningen</a>  
-                <a href="#">Mål</a>
+                <a href="pages/om-föreningen.html">Om Föreningen</a>  
+                <a href="pages/mål.html">Mål</a>
                 <a href="#">Styrelse</a>
-                <a href="#">Stadgar</a>
+                <a href="pages/stadgar.html">Stadgar</a>
             </div>
         </div>
         <div class="dropdown">
-            <a class="dropbtn">Kontakt</a>
+            <a class="dropbtn" href="pages/kontakt.html">Kontakt</a>
         </div>
     </div>
 
