--- a/pages/bli-medlem.html
+++ b/pages/bli-medlem.html
@@ -18,19 +18,19 @@
         </div>
         <div class="navbar navbar-pages-links">
             <div class="dropdown">
-                <a class="dropbtn">Bli Medlem</a>
+                <a class="dropbtn" href="bli-medlem.html">Bli Medlem</a>
             </div>
             <div class="dropdown">
-                <a class="dropbtn">Om Föreningen</a>
+                <a class="dropbtn" href="om-föreningen.html">Om Föreningen</a>
                 <div class="dropdown-content">
-                    <a href="#">Om Föreningen</a>  
-                    <a href="#">Mål</a>
+                    <a href="om-föreningen.html">Om Föreningen</a>  
+                    <a href="mål.html">Mål</a>
                     <a href="#">Styrelse</a>
-                    <a href="#">Stadgar</a>
+                    <a href="stadgar.html">Stadgar</a>
                 </div>
             </div>
             <div class="dropdown">
-                <a class="dropbtn">Kontakt</a>
+                <a class="dropbtn" href="kontakt.html">Kontakt</a>
             </div>
         </div>
     </div>
