--- a/pages/styrelse.html
+++ b/pages/styrelse.html
@@ -36,18 +36,44 @@
     </div>
 
     <!-- Body -->
-    <div class="flex-layout-row">
-        <h1>
-            Om Föreningen
-        </h1>
-        <p>
-            Vi är den ideella föreningen Malma by och ängar. Bäcklösa ängar med rik biologisk mångfald är en av Sveriges mest bevaransvärda ängar enligt Jordbruksverket. 
-            Vi vill bevara ängarna och utveckla Malma by med omgivande natur- och kulturlandskap. Vi vill tillvarata våra medlemmars kunskap och intresse för området 
-            och verka för god kommunikation mellan föreningen, kommunen, markägare och andra intressenter. Vi anordnar och stödjer aktiviteter som visar på områdets 
-            naturvärden och värdefulla bidrag av ekosystemtjänster. Vi verkar emot markexploatering i området kring Malma by, Bäcklösa ängar och Bäcklösa Natura2000.
-        </p>
+    <h1 id="styrelse-page-title">Vår styrelse</h1>
+    <div class="styrelse-flexbox-wrapper">
+        <div>
+            <img src="../src/images/styrelse/margareta.jpg" />
+            <h3>Margareta Krabbe</h3>
+            <span>Ordförande</span>
+        </div>
+        <div>
+            <img src="../src/images/styrelse/sinnika.jpg" />
+            <h3>Sinnika Anell</h3>
+            <span>Vice Ordförande</span>
+        </div>
+        <div>
+            <img src="../src/images/styrelse/hans.jpg" />
+            <h3>Hans Åberg</h3>
+            <span>Sekreterare</span>
+        </div>
+        <div>
+            <img src="../src/images/styrelse/ulla-britt.jpg" />
+            <h3>Ulla-Britt Fogelin Ekström</h3>
+            <span>Kassör</span>
+        </div>
+        <div>
+            <img src="../src/images/styrelse/leif.jpg" />
+            <h3>Leif Eriksson</h3>
+            <span>Ledamot</span>
+        </div>
+        <div>
+            <img src="../src/images/styrelse/kurt.jpg" />
+            <h3>Kurt Kälsström</h3>
+            <span>Suppleant</span>
+        </div>
+        <div>
+            <img />
+            <h3>Charlotte Petersson</h3>
+            <span>Suppleant</span>
+        </div>
     </div>
-    <img id="image-right" src="../src/images/räv.jpg" />
 
     <!-- Footer (Future problem) -->
 
