Add phone navigation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
 </head>
 <body>
     
+    <nav role="navigation">
+        <div id="menuToggle">
+          <input type="checkbox" />
+          <span></span>
+          <span></span>
+          <span></span>
+          <ul id="menu">
+            <a href="index.html"><li>Hem</li></a>
+            <a href="pages/bli-medlem.html"><li>Bli Medlem</li></a>
+            <a href="pages/om-föreningen.html"><li>Om Föreningen</li></a>
+            <a href="pages/mål.html"><li>Mål</li></a>
+            <a href="pages/styrelse.html"><li>Styrelse</li></a>
+            <a href="pages/stadgar.html"><li>Stadgar</li></a>
+            <a href="pages/kontakt.html"><li>Kontakt</li></a>
+          </ul>
+        </div>
+    </nav>
+
     <!-- Header -->
     <div class="navbar">
         <div class="dropdown">
