--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -10,6 +10,24 @@
     <title>Malma Ängar</title>
 </head>
 <body>
+
+    <nav role="navigation">
+        <div id="menuToggle">
+          <input type="checkbox" />
+          <span></span>
+          <span></span>
+          <span></span>
+          <ul id="menu">
+            <a href="../index.html"><li>Hem</li></a>
+            <a href="bli-medlem.html"><li>Bli Medlem</li></a>
+            <a href="om-föreningen.html"><li>Om Föreningen</li></a>
+            <a href="mål.html"><li>Mål</li></a>
+            <a href="styrelse.html"><li>Styrelse</li></a>
+            <a href="stadgar.html"><li>Stadgar</li></a>
+            <a href="kontakt.html"><li>Kontakt</li></a>
+          </ul>
+        </div>
+    </nav>
     
     <!-- Header -->
     <div class="navbar-pages">
